kubernetes/permitify.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: person
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: person
        tier: backend
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      containers:
      - name: person
        image: $REGISTRY/permitify
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: person
spec:
  ports:
  - protocol: TCP
    port: 8080
  selector:
    app: person
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: faber-college
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: faber-college
        tier: backend
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      containers:
      - name: dmv
        image: $REGISTRY/permitify
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: faber
spec:
  ports:
  - protocol: TCP
    port: 8080
  selector:
    app: faber-college
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: acme-corp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: acme-corp
        tier: backend
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      containers:
      - name: thrift-bank
        image: $REGISTRY/permitify
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: acme-corp
spec:
  ports:
  - protocol: TCP
    port: 8080
  selector:
    app: acme-corp
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: acme-corp-apply
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: acme-corp-apply
        tier: backend
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      containers:
      - name: thrift-bank
        image: $REGISTRY/permitify
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: acme-corp-apply
spec:
  ports:
  - protocol: TCP
    port: 8080
  selector:
    app: acme-corp-apply
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: thrift-bank
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: thrift-bank
        tier: backend
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      containers:
      - name: thrift-bank
        image: $REGISTRY/permitify
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: thrift-bank
spec:
  ports:
  - protocol: TCP
    port: 8080
  selector:
    app: thrift-bank
    tier: backend
