kubernetes/theorgbook.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tob-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tob-db
        tier: backend
    spec:
      containers:
      - name: tob-db
        image: registry.access.redhat.com/rhscl/postgresql-95-rhel7@sha256:155cf81a3d3a8bbcab3a1f61b177cab75a4105306146d172ef8fb29488cf58b4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: tob-db
spec:
  ports:
  - port: 5432
  selector:
    app: tob-db
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tob-solr
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tob-solr
        tier: backend
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      containers:
      - name: tob-solr
        image: registry.ng.bluemix.net/indyworld/solr
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8983
---
apiVersion: v1
kind: Service
metadata:
  name: tob-solr
spec:
  ports:
  - port: 8983
  selector:
    app: tob-solr
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tob-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tob-api
        tier: middleware
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      containers:
      - name: tob-api
        image: registry.ng.bluemix.net/indyworld/django
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
        command: ["./ibm-prereg.sh"]
---
apiVersion: v1
kind: Service
metadata:
  name: tob-api
spec:
  ports:
  - protocol: TCP
    port: 8080
    name: tob-api
  selector:
    app: tob-api
    tier: middleware
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tob-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tob-web
        tier: frontend
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      containers:
      - name: tob-web
        image: registry.ng.bluemix.net/indyworld/angular-on-nginx
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tob-web
spec:
  ports:
  - protocol: TCP
    port: 8080
    name: tob-web
  selector:
    app: tob-web
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: schema-spy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: schema-spy
        tier: middleware
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      containers:
      - name: schema-spy
        image: registry.ng.bluemix.net/indyworld/schema-spy
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: schema-spy
spec:
  ports:
  - protocol: TCP
    port: 8080
    name: schema-spy
  selector:
    app: schema-spy
    tier: middleware
