kubernetes/von-network.yml
##
# Client
##
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: von-network
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: von-network
    spec:
      imagePullSecrets:
        - name: bluemix-default-secret
      volumes:
      - name: node-1-volume
        emptyDir: {}
      - name: node-2-volume
        emptyDir: {}
      - name: node-3-volume
        emptyDir: {}
      - name: node-4-volume
        emptyDir: {}
      containers:
      - name: von-web
        command: ["bash", "-c",
                "sleep 5 && ./scripts/start_webserver.sh"]
        image: $REGISTRY/von-base
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: node-1-volume
          mountPath: /home/indy/.mnt/node1
        - name: node-2-volume
          mountPath: /home/indy/.mnt/node2
        - name: node-3-volume
          mountPath: /home/indy/.mnt/node3
        - name: node-4-volume
          mountPath: /home/indy/.mnt/node4
      - name: node-1
        image: $REGISTRY/von-base
        command: ["bash", "-c",
                  "./scripts/start_node.sh; sleep 3000"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9701
        - containerPort: 9702
        volumeMounts:
        - name: node-1-volume
          mountPath: /var/lib/indy
      - name: node-2
        image: $REGISTRY/von-base
        command: ["bash", "-c",
                  "./scripts/start_node.sh; sleep 3000"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9703
        - containerPort: 9704
        volumeMounts:
        - name: node-2-volume
          mountPath: /var/lib/indy
      - name: node-3
        image: $REGISTRY/von-base
        command: ["bash", "-c",
                  "./scripts/start_node.sh; sleep 3000"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9705
        - containerPort: 9706
        volumeMounts:
        - name: node-3-volume
          mountPath: /var/lib/indy
      - name: node-4
        image: $REGISTRY/von-base
        command: ["bash", "-c",
                  "./scripts/start_node.sh; sleep 3000"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9707
        - containerPort: 9708
        volumeMounts:
        - name: node-4-volume
          mountPath: /var/lib/indy
---
apiVersion: v1
kind: Service
metadata:
  name: von-web
spec:
  ports:
  - protocol: TCP
    port: 8000
    name: von-web
  selector:
    app: von-network
---
apiVersion: v1
kind: Service
metadata:
  name: node-1
spec:
  ports:
  - port: 9701
    name: indy
  - port: 9702
    name: api
  selector:
    app: von-network
---
apiVersion: v1
kind: Service
metadata:
  name: node-2
spec:
  ports:
  - port: 9703
    name: indy
  - port: 9704
    name: api
  selector:
    app: von-network
---
apiVersion: v1
kind: Service
metadata:
  name: node-3
spec:
  ports:
  - port: 9705
    name: indy
  - port: 9706
    name: api
  selector:
    app: von-network
---
apiVersion: v1
kind: Service
metadata:
  name: node-4
spec:
  ports:
  - port: 9707
    name: indy
  - port: 9708
    name: api
  selector:
    app: von-network
